--- a/bbc/Base.lproj/Main.storyboard
+++ b/bbc/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
             </objects>
             <point key="canvasLocation" x="1717.5999999999999" y="-42.728635682158924"/>
         </scene>
-        <!--Title-->
+        <!--Menu-->
         <scene sceneID="Az5-VB-bJM">
             <objects>
                 <viewController id="6cu-n9-aso" sceneMemberID="viewController">
@@ -148,7 +148,7 @@
                         <color key="backgroundColor" red="0.9492673278" green="0.87903708219999999" blue="0.86038213969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="DmB-3S-bb7"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="vdY-Ll-Wm1">
+                    <navigationItem key="navigationItem" title="Menu" id="vdY-Ll-Wm1">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="person.crop.circle" catalog="system" width="6" id="yyk-LO-dWH"/>
                     </navigationItem>
                 </viewController>
